fix: header spacing

--- a/styles/components/Header/default.module.scss
+++ b/styles/components/Header/default.module.scss
@@ -18,7 +18,7 @@
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    height: 65vh;
+    height: 80vh;
     &::after {
       right: 5rem;
       width: 6rem;
